velero-mpol/backup-all-volumes/.kyverno-test/patchedResource-fourth.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: fourth
  namespace: foo
  labels:
    app: busybox
spec:
  replicas: 1
  selector:
    matchLabels:
      app: busybox
  template:
    metadata:
      labels:
        app: busybox
      annotations:
        backup.velero.io/backup-volumes: task-pv-storage
    spec:
      volumes:
        - name: task-pv-storage
          persistentVolumeClaim:
            claimName: mypvc
      containers:
        - name: task-pv-container
          image: nothinghere:123
          ports:
            - containerPort: 80
              name: "http-server"
          volumeMounts:
            - mountPath: "/usr/share/nginx/html"
              name: task-pv-storage
