velero-mpol/backup-all-volumes/.kyverno-test/kyverno-test.yaml
apiVersion: cli.kyverno.io/v1alpha1
kind: Test
metadata:
  name: backup-all-volumes
policies:
- ../backup-all-volumes.yaml
resources:
- resource.yaml
- exception-resource.yaml
exceptions:
- exceptions.yaml
results:
- kind: Deployment
  patchedResources: patchedResource-fourth.yaml
  policy: backup-all-volumes
  resources:
  - foo/fourth
  result: pass
  isMutatingPolicy: true
- kind: Pod
  policy: backup-all-volumes
  resources:
  - foo/exception-pod
  result: skip
  isMutatingPolicy: true
- kind: Pod
  patchedResources: patchedResource-third.yaml
  policy: backup-all-volumes
  resources:
  - foo/third
  result: pass
  isMutatingPolicy: true
- kind: Pod
  patchedResources: patchedResource.yaml
  policy: backup-all-volumes
  resources:
  - foo/first
  result: pass
  isMutatingPolicy: true
variables: values.yaml
